# MedSaathi

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: embeddings.py  evaluator.py  generator.py  guardrails.py  ingest.py  main.py  memory.py  query_rewriter.py  reranker.py  retriever.py
frontend/: chat.js  index.html  style.css
